tests/neg-custom-args/captures/capless-strawman6.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capless-strawman6.scala:8:23 -----------------------------
8 |    val f: () -> Int = () => this.data  // error
  |                       ^^^^^^^^^^^^^^^
  |                       Found:    () ->{Foo.this} Int
  |                       Required: () -> Int
  |
  |                       Note that capability Foo.this is not included in capture set {}.
  |
  | longer explanation available when compiling with `-explain`
